--- a/function/calculator.html
+++ b/function/calculator.html
@@ -89,6 +89,6 @@
         </div>
     </div>
 
-    <script src="calculator.js"></script>
+    <script src="./js/calculator.js"></script>
 </body>
 </html>
